# Chat-With-Repository

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/: api.py  streamlit_app.py
app/chains/: __init__.py  qa_chain.py
app/config/: config.py
app/embeddings/: __init__.py  points.py
app/encoders/: __init__.py  config.py  encoder.py
app/loaders/: git_loader.py
app/qdrant/: config.py  qdrant.py  qdrant_store.py
app/retrievers/: __init__.py  classifier.py  reranker.py  retriever.py
app/splitters/: __init__.py  config.py  text_splitter.py
app/utils/: answer_questions.py
